--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "social-reshare",
   "version": "0.0.2",
   "description": "social app reshare web pages with specific format",
-  "main": "index.js",
+  "main": "SocialReshare.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,5 +20,27 @@
   "bugs": {
     "url": "https://github.com/unbug/social-reshare/issues"
   },
-  "homepage": "https://github.com/unbug/social-reshare"
+  "homepage": "https://github.com/unbug/social-reshare",
+  "devDependencies": {
+    "amdclean": "^2.4.0",
+    "date-utils": "^1.2.16",
+    "del": "^1.1.1",
+    "gulp": "^3.8.11",
+    "gulp-amdclean": "^1.0.1",
+    "gulp-cachebust": "0.0.5",
+    "gulp-cached": "^1.0.4",
+    "gulp-file-include": "^0.8.0",
+    "gulp-if": "^1.2.5",
+    "gulp-jshint": "^1.9.2",
+    "gulp-load-plugins": "^0.8.1",
+    "gulp-replace": "^0.5.3",
+    "gulp-requirejs": "^0.1.3",
+    "gulp-size": "^1.2.1",
+    "gulp-sourcemaps": "^1.5.1",
+    "gulp-uglify": "^1.1.0",
+    "gulp-util": "^3.0.4",
+    "run-sequence": "^1.0.2",
+    "through2": "^0.6.3",
+    "vinyl-source-stream": "^1.1.0"
+  }
 }
